Mask - Clicking in ActivePoint Parent makes Blender crash. #50062

Closed
opened 2016-11-17 16:37:14 +01:00 by Mario Mey · 9 comments

Ubuntu 14.04 64x
nVidia GT620

Broken: 2.78a

This is backtrace:

# Blender 2.78 (sub 0), Commit date: 2016-10-24 12:20, Hash e8299c8

# backtrace
./blender(BLI_system_backtrace+0x1d) [0x1b631ad]
./blender() [0x11bbcfe]
/lib/x86_64-linux-gnu/libc.so.6(+0x36cb0) [0x7ff3d2c7ecb0]

Ubuntu 14.04 64x nVidia GT620 Broken: 2.78a - Open file: [103-mask-active-point-parent.blend](https://archive.blender.org/developer/F402504/103-mask-active-point-parent.blend) - Click on Mask Panel - Active Point - Parent: in my computer, Blender crashes. This is backtrace: \# Blender 2.78 (sub 0), Commit date: 2016-10-24 12:20, Hash e8299c8 \# backtrace ./blender(BLI_system_backtrace+0x1d) [0x1b631ad] ./blender() [0x11bbcfe] /lib/x86_64-linux-gnu/libc.so.6(+0x36cb0) [0x7ff3d2c7ecb0]
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @MarioSottile

Added subscriber: @MarioSottile
Mario Mey changed title from Mask - Active Point parent click makes Blender crash. to Mask - Clicking in ActivePoint Parent makes Blender crash. 2016-11-17 16:46:55 +01:00

Added subscriber: @Sergey

Added subscriber: @Sergey

This file is somewhat corrupted: mask parent's ID type is supposed to always be ID_MC (ID type of MovieClip), but in this file the type is simply 0 (which is not a valid ID type even).

How did you create such a file and can you reproduce the issue again?

This file is somewhat corrupted: mask parent's ID type is supposed to always be `ID_MC` (ID type of MovieClip), but in this file the type is simply 0 (which is not a valid ID type even). How did you create such a file and can you reproduce the issue again?
Author

This file is created from scratch in 2.78a.

  • Open Blender
  • Go to Compositing layout
  • Change Image Editor panel to Mask
  • Create a new Mask
  • Create a Square
  • Click on a vertex
  • Open Properties
  • Click on Active Point - Parent.
  • Crash.

I just followed these steps again and it crashed again.

This file is created from scratch in 2.78a. - Open Blender - Go to Compositing layout - Change Image Editor panel to Mask - Create a new Mask - Create a Square - Click on a vertex - Open Properties - Click on Active Point - Parent. - **Crash**. I just followed these steps again and it crashed again.

This issue was referenced by 0c958b9f8e

This issue was referenced by 0c958b9f8e933605497a59faf8838a544b9da740

Added subscriber: @mont29

Added subscriber: @mont29

Can confirm the issue, 'Add Square' and then select a mask point, and the id_type of points' parents remains to 0.

Fix incoming (will also do some doversion, so broken files will be working again too).

Can confirm the issue, 'Add Square' and then select a mask point, and the id_type of points' parents remains to 0. Fix incoming (will also do some doversion, so broken files will be working again too).

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50062
No description provided.